rs/macros/tests/ui/sails_type_fails_unknown_arg.rs
use sails_rs::sails_type;

#[sails_type(bogus)]
pub struct S;

fn main() {}
